# did-annuaire-be1

./: .dockerignore  .gitignore  Dockerfile  bao.conf  compose.yml  docker-compose.yml  entrypoint.sh  gunicorn.conf.py  keyfactor.yml  manage.py  nginx.conf  openssl.cnf  particulars.md  pyproject.toml  rav.yaml  server.crt  server.key  todos
.github/workflows/: build-push-prime.yml  build-push.yml  deploy-staging-prime.yml  deploy-staging.yml
config/: asgi.py  env.py  urls.py  wsgi.py
config/django/: base.py  production.py  test.py
config/settings/: celery.py  cors.py  email_sending.py  files_and_storages.py  jwt.py  sentry.py  sessions.py
config/settings/loggers/: settings.py  setup.py
docs/: PASSWORD_RESET_API.md
jwk_extract/: build.gradle.kts
src/api/: exception_handler.py  pagination.py  urls.py
src/api_keys/: admin.py  apis.py  apps.py  models.py  presenters.py  selectors.py  services.py
src/api_keys/migrations/: 0001_initial.py  0002_initial.py
src/auditaction/: admin.py  apis.py  apps.py  models.py  selectors.py  services.py  signals.py
src/auditaction/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_alter_auditlog_action.py  0004_remove_auditlog_audit_logs_organiz_86ff70_idx_and_more.py  0005_alter_auditlog_action.py  (+7 more)
src/authentication/: services.py
src/common/: apps.py  factories.py  models.py  services.py  utils.py
src/core/: apis.py  exceptions.py  policies.py  ratelimit.py
src/crypto/: openbao_transit.py
src/dids/: __init__.py  admin.py  api_certificates.py  api_registry_create.py  apis.py  apis_registry.py  apis_universal.py  apis_version_service.py  apps.py  models.py  policies.py  presenters.py  schemas.py  selectors.py  services.py  signing.py
src/emails/: admin.py  apps.py  enums.py  services.py  tasks.py
src/errors/: apis.py  apps.py  services.py
src/files/: admin.py  apis.py  apps.py  models.py  services.py  urls.py
src/integrations/: apps.py
src/organizations/: admin.py  apis.py  apps.py  models.py  presenters.py  schemas.py  selectors.py  services.py
src/seeders/: apps.py
src/superadmin/: apis.py  apps.py  presenters.py  schemas.py  selectors.py  services.py
src/tasks/: apps.py  celery.py  jwt.py
src/users/: admin.py  apis.py  models.py  presenters.py  schemas.py  selectors.py  services.py  throttlers.py  utils.py
src/webui/: apps.py  forms.py  urls.py  views.py
(+92 files in other folders)
