[project]
name = "did-annuaire-be1"
version = "0.1.0"
description = "DID Annuaire - Decentralized identifier application"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3",
    "celery",
    "dj-database-url",
    "django",
    "django-celery-beat",
    "django-celery-results",
    "django-environ",
    "django-extensions",
    "django-ninja",
    "django-ninja-jwt[crypto]",
    "django-orbit",
    "django-structlog[celery]",
    "gunicorn",
    "jsonschema",
    "psycopg[c]",
    "pyld",
    "pyotp",
    "qrcode[pil]",
    "sentry-sdk[django]",
]

[dependency-groups]
dev = [
    "django-debug-toolbar",
    "rav",
    "ruff",
]


