[project]
name = "did-annuaire-be1"
version = "0.1.0"
description = "DID Annuaire - Decentralized identifier application"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3",
    "celery==5.6.2",
    "dj-database-url",
    "django",
    "django-celery-beat==2.8.1",
    "django-celery-results==2.6.0",
    "django-cors-headers",
    "django-environ",
    "django-extensions",
    "django-ninja",
    "django-ninja-jwt[crypto]",
    "django-orbit",
    "django-structlog[celery]",
    "gunicorn",
    "jsonschema",
    "psycopg[c]",
    "pyld",
    "pyotp",
    "pytz",
    "qrcode[pil]",
    "sentry-sdk[django]",
]

[dependency-groups]
dev = [
    "django-debug-toolbar",
    "rav",
    "ruff",
]


