[project]
name = "did-annuaire-be1"
version = "0.1.0"
description = "DID Annuaire - Decentralized identifier application"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3",
    "celery",
    "dj-database-url",
    "django",
    "django-celery-beat>=2.8.1",
    "django-celery-results",
    "django-cors-headers",
    "django-environ",
    "django-extensions",
    "django-ninja",
    "django-ninja-jwt[crypto]",
    "django-orbit==0.6.3",
    "django-request-id>=1.0.0",
    "django-structlog[celery]",
    "ecdsa>=0.19.1",
    "gunicorn",
    "jsonschema",
    "psycopg[c]",
    "pyasn1>=0.6.2",
    "pyasn1-modules>=0.4.2",
    "pydantic[email]>=2.12.5",
    "pyld",
    "pyotp",
    "pytz",
    "qrcode[pil]",
    "sentry-sdk[django]",
]

[dependency-groups]
dev = [
    "django-debug-toolbar",
    "rav",
    "ruff",
]


